--- a/index.html
+++ b/index.html
@@ -1,5 +1,21 @@
 ---
 layout: default
 title: Homepage
+blocks:
+- id: rich-text 
+  text_html: Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis deserunt, doloribus incidunt beatae id distinctio consectetur aut fugiat magnam, nam maiores exercitationem reiciendis molestiae tempora quaerat cumque itaque possimus dolore?
+  height: 95vh
+  width: 33%
+  horizontal-placement: center
+  vertical-placement: center
+  text-alignment: center
+- id: banner 
+  text_html: Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis deserunt, doloribus incidunt beatae id distinctio consectetur aut fugiat magnam, nam maiores exercitationem reiciendis molestiae tempora quaerat cumque itaque possimus dolore?
+  height: 95vh
+  width: 33%
+  horizontal-placement: center
+  vertical-placement: center
+  text-alignment: center
+  image: https://picsum.photos/id/1025/600/400
+  alt:
 ---
-<h1 class="text-4xl font-bold text-green-900">Welcome to your homepage!</h1>
