ticker banner created

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@ layout: default
 title: Homepage
 blocks:
 - id: rich-text 
-  text_html: Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis deserunt, doloribus incidunt beatae id distinctio consectetur aut fugiat magnam, nam maiores exercitationem reiciendis molestiae tempora quaerat cumque itaque possimus dolore?
+  text-html: Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis deserunt, doloribus incidunt beatae id distinctio consectetur aut fugiat magnam, nam maiores exercitationem reiciendis molestiae tempora quaerat cumque itaque possimus dolore?
   height: 95vh
   width: 33%
   horizontal-placement: center
   vertical-placement: center
   text-alignment: center
 - id: banner 
-  text_html: Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis deserunt, doloribus incidunt beatae id distinctio consectetur aut fugiat magnam, nam maiores exercitationem reiciendis molestiae tempora quaerat cumque itaque possimus dolore?
+  text-html: Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis deserunt, doloribus incidunt beatae id distinctio consectetur aut fugiat magnam, nam maiores exercitationem reiciendis molestiae tempora quaerat cumque itaque possimus dolore?
   height: 95vh
   width: 33%
   horizontal-placement: center
@@ -18,4 +18,15 @@ blocks:
   text-alignment: center
   image: https://picsum.photos/id/1025/600/400
   alt:
+  overlay:
+    color: 
+    opacity: 
+- id: ticker-banner
+  banner-message:
+  - text: Lorem ipsum dolor sit!
+    url:
+  - text: Doloribus incidunt beatae!
+    url:
+  - text: Dexercitationem reiciendis!
+    url:
 ---
