dan commited for me

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@ blocks:
     color: 
     opacity: 
 - id: ticker-banner
+  banner-style:
+    direction: English
+    speed: 50
+    text-size:
   banner-message:
   - text: Lorem ipsum dolor sit!
     url:
