working on accordion + a few smaller tweaks to rich-text and ticker-banner

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Homepage
 blocks:
 - id: rich-text 
-  text-html: Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis deserunt, doloribus incidunt beatae id distinctio consectetur aut fugiat magnam, nam maiores exercitationem reiciendis molestiae tempora quaerat cumque itaque possimus dolore?
+  text-html: Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis deserunt, doloribus incidunt beatae id distinctio consectetur aut fugiat magnam, nam maiores exercitationem reiciendis molestiae tempora quaerat cumque itaque possimus dolore? Now we're woking on the code so that we can showcase how good our typing skills are - yes I hunt and pack - try and call me out oabout it.
   height: 95vh
   width: 33%
   horizontal-placement: center
@@ -33,4 +33,15 @@ blocks:
     url:
   - text: Dexercitationem reiciendis!
     url:
+- id: accordion
+  section-heading: This is a heading
+  heading-text-alignment: left
+  faq-text-alignment: left
+  faq-loop:
+    - question: Lorem ipsum dolor sit amet consectetur adipisicing elit?
+      answer-html: Harum tempora rerum debitis! Quo fugiat eius accusamus suscipit dignissimos aspernatur aliquid nisi repellat expedita veritatis saepe, delectus, dolorem consequatur autem fugit.
+    - question: Lorem ipsum dolor sit amet consectetur adipisicing elit?
+      answer-html: Harum tempora rerum debitis! Quo fugiat eius accusamus suscipit dignissimos aspernatur aliquid nisi repellat expedita veritatis saepe, delectus, dolorem consequatur autem fugit.
+    - question: Lorem ipsum dolor sit amet consectetur adipisicing elit?
+      answer-html: Harum tempora rerum debitis! Quo fugiat eius accusamus suscipit dignissimos aspernatur aliquid nisi repellat expedita veritatis saepe, delectus, dolorem consequatur autem fugit.
 ---
