accordion icon transitions

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@ blocks:
   heading-text-alignment: left
   faq-text-alignment: left
   faq-loop:
-    - question: Lorem ipsum dolor sit amet consectetur adipisicing elit?
+    - question: Do you have a question?
       answer-html: Harum tempora rerum debitis! Quo fugiat eius accusamus suscipit dignissimos aspernatur aliquid nisi repellat expedita veritatis saepe, delectus, dolorem consequatur autem fugit.
-    - question: Lorem ipsum dolor sit amet consectetur adipisicing elit?
-      answer-html: Harum tempora rerum debitis! Quo fugiat eius accusamus suscipit dignissimos aspernatur aliquid nisi repellat expedita veritatis saepe, delectus, dolorem consequatur autem fugit.
-    - question: Lorem ipsum dolor sit amet consectetur adipisicing elit?
+    - question: Is there another question you need to answer?
+      answer-html: Harum tempora rerum debitis! Quo fugiat eius accusamus suscipit dignissimos aspernatur aliquid nisi repellat expedita veritatis saepe, delectus, dolorem consequatur autem fugit. Quo fugiat eius accusamus suscipit dignissimos aspernatur aliquid nisi repellat expedita veritatis saepe, delectus, dolorem consequatur autem fugit.
+    - question: Did we answer your question?
       answer-html: Harum tempora rerum debitis! Quo fugiat eius accusamus suscipit dignissimos aspernatur aliquid nisi repellat expedita veritatis saepe, delectus, dolorem consequatur autem fugit.
 ---
