started filterable grid

--- a/index.html
+++ b/index.html
@@ -44,4 +44,22 @@ blocks:
       answer-html: Harum tempora rerum debitis! Quo fugiat eius accusamus suscipit dignissimos aspernatur aliquid nisi repellat expedita veritatis saepe, delectus, dolorem consequatur autem fugit. Quo fugiat eius accusamus suscipit dignissimos aspernatur aliquid nisi repellat expedita veritatis saepe, delectus, dolorem consequatur autem fugit.
     - question: Did we answer your question?
       answer-html: Harum tempora rerum debitis! Quo fugiat eius accusamus suscipit dignissimos aspernatur aliquid nisi repellat expedita veritatis saepe, delectus, dolorem consequatur autem fugit.
+- id: filterable-grid
+  filter-buttons:
+    - button-text: Landscape
+    - button-text: Portrait
+    - button-text: Animal
+  grid:
+    - image: https://picsum.photos/id/1025/600/400
+      alt:
+      filter: Landscape Animal
+      caption:
+    - image: https://picsum.photos/id/1025/600/400
+      alt:
+      filter: Portrait
+      caption:
+    - image: https://picsum.photos/id/1025/600/400
+      alt:
+      filter: Landscape 
+      caption:
 ---
