And / or filter options - thanks Dan :)

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@ blocks:
         - button-text: Pescatarian
         - button-text: Vegetarian
         - button-text: Vegan
+        - button-text: Gluten free
   grid:
     - filter: Vegetarian Vegan Nuts
       dish-name: Dish 1
@@ -98,7 +99,7 @@ blocks:
       dish-name: Dish 2
       price: $32
       description: Animi praesentium a recusandae sit. Velit natus suscipit corrupti rem ea. Excepturi quaerat porro at libero maiores.
-    - filter: Vegetarian 
+    - filter: Vegetarian Gluten free
       dish-name: Dish 3
       price: $17
       description: Optio perspiciatis perferendis architecto eveniet. Praesentium a recusandae sit. Velit natus suscipit.
