starting the Cloud Cannon Config

--- a/index.html
+++ b/index.html
@@ -89,21 +89,28 @@ blocks:
         - button-text: Pescatarian
         - button-text: Vegetarian
         - button-text: Vegan
-        - button-text: Gluten free
+        - button-text: GF
   grid:
-    - filter: Vegetarian Vegan Nuts
+    - filter: 
+        - Vegetarian 
+        - Vegan 
+        - Nuts
       dish-name: Dish 1
       price: $45
       description: Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio perspiciatis perferendis architecto eveniet.
-    - filter: Pescatarian
+    - filter: 
+        - Pescatarian
       dish-name: Dish 2
       price: $32
       description: Animi praesentium a recusandae sit. Velit natus suscipit corrupti rem ea. Excepturi quaerat porro at libero maiores.
-    - filter: Vegetarian Gluten free
+    - filter: 
+        - Vegetarian 
+        - GF
       dish-name: Dish 3
       price: $17
       description: Optio perspiciatis perferendis architecto eveniet. Praesentium a recusandae sit. Velit natus suscipit.
-    - filter: Vegetarian 
+    - filter: 
+        - Vegetarian 
       dish-name: Dish 4
       price: $36
       description: Praesentium a recusandae sit. Velit natus suscipit corrupti rem ea. Excepturi quaerat porro at libero maiores.
