--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@ layout: default
 title: Homepage
 blocks:
 - id: rich-text 
-  text-html: Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis deserunt, doloribus incidunt beatae id distinctio consectetur aut fugiat magnam, nam maiores exercitationem reiciendis molestiae tempora quaerat cumque itaque possimus dolore? Now we're woking on the code so that we can showcase how good our typing skills are - yes I hunt and pack - try and call me out oabout it.
+  text-html: Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis deserunt, doloribus incidunt beatae id distinctio consectetur aut fugiat magnam, nam maiores exercitationem reiciendis molestiae tempora quaerat cumque itaque possimus dolore?
   height: 95vh
   width: 33%
   horizontal-placement: center
   vertical-placement: center
   text-alignment: center
+  scheme-color: dark
 - id: banner 
   text-html: Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis deserunt, doloribus incidunt beatae id distinctio consectetur aut fugiat magnam, nam maiores exercitationem reiciendis molestiae tempora quaerat cumque itaque possimus dolore?
   height: 95vh
