navigation links, SEO, 404 page, adding front matter comments

--- a/contact.html
+++ b/contact.html
@@ -34,4 +34,10 @@ blocks:
     placeholder-text: Add placeholder text here...
     width: full
     required: true
+seo:
+  title: 
+  description:
+  image:
+  favicon:
+  index: true
 ---
