--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 ---
 layout: default
-title: Homepage
 blocks:
 - id: rich-text 
   text-html: Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis deserunt, doloribus incidunt beatae id distinctio consectetur aut fugiat magnam, nam maiores exercitationem reiciendis molestiae tempora quaerat cumque itaque possimus dolore?
@@ -115,4 +114,10 @@ blocks:
       dish-name: Dish 4
       price: $36
       description: Praesentium a recusandae sit. Velit natus suscipit corrupti rem ea. Excepturi quaerat porro at libero maiores.
+seo:
+  title:  
+  description:
+  image:
+  favicon:
+  index: true
 ---
