added the submit button to the form

--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,8 @@ layout: default
 title: Contact
 blocks:
 - id: form
+  button-alignment: center
+  submit-button-text: Submit
   inputs:
   - type: text
     name: First name
